<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/options"
        android:textColor="#C9363535"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/historyCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="1"
            android:text="@string/history" />

        <SeekBar
            android:id="@+id/historySeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="10"
            android:tag="1" />

        <TextView
            android:id="@+id/historyCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/actionCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:duplicateParentState="false"
            android:focusable="true"
            android:tag="2"
            android:text="@string/action" />

        <SeekBar
            android:id="@+id/actionSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="10"
            android:tag="2" />

        <TextView
            android:id="@+id/actionCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/sciFiCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tag="3"
            android:text="@string/sci_fi" />

        <SeekBar
            android:id="@+id/sciFiSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="10"
            android:tag="3" />

        <TextView
            android:id="@+id/sciFiCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_10" />
    </LinearLayout>

    <Button
        android:id="@+id/startNewExamBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#A6DA1E0D"
        android:text="@string/start_new_exam" />

    <Button
        android:id="@+id/goBackBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#AB2888A5"
        android:text="@string/go_back" />

</LinearLayout>